--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html, body {
+  @apply flex bg-neutral-200 font-sans h-full w-full;
+}
