- Post re-designed UI - Post mock data - Post component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <header class="flex box-content bg-black text-white justify-between items-center font-thin">
-  <h1 class="text-2xl ml-3">POST-MANAGEMENT</h1>
+  <h1 class="text-2xl ml-3">POSTS ARCHIVE</h1>
   <nav>
     <ul class="flex">
       <li class="flex">
-        <a routerLink="/news"
-          class="p-4 hover:bg-gray-500">News</a></li>
+        <a routerLink="/posts"
+          class="p-4 hover:bg-gray-500">Home</a></li>
       <li class="flex">
         <a routerLink="/create"
            class="p-4 hover:bg-gray-500">Create post</a></li>
