--- a/src/app/posts/containers/posts-list/posts-list.component.html
+++ b/src/app/posts/containers/posts-list/posts-list.component.html
@@ -1,18 +1,10 @@
 <section aria-labelledby="news">
-  <h1 class="text-3xl p-3 border-b border-t-gray-100" id="news">News</h1>
+  <h1 class="text-3xl p-3 border-b border-t-gray-100" id="news">Posts</h1>
 
-  <article class="news-card">
-    <header>
-      <h2 class="news-title">
-        <a href="news-url.html">News Title</a>
-      </h2>
-      <time datetime="2024-10-18" class="news-date">October 18, 2024</time>
-    </header>
-
-    <figure class="news-image">
-      <img src="news-image.jpg" alt="Short description of the image">
-      <figcaption>Image caption (if necessary)</figcaption>
-    </figure>
-  </article>
+  <div class="grid grid-cols-3 gap-4 p-10 box-content">
+    @for (post of posts; track post.title) {
+      <app-post-card [post]="post"></app-post-card>
+    }
+  </div>
 
 </section>
