--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
           class="p-4 hover:bg-gray-500">Home</a></li>
       <li class="flex">
         <a routerLink="/create"
-           class="p-4 hover:bg-gray-500">Create post</a></li>
+           class="p-4 hover:bg-gray-500">New post</a></li>
     </ul>
   </nav>
 </header>
