--- a/src/app/posts/containers/post/post.component.html
+++ b/src/app/posts/containers/post/post.component.html
@@ -1,1 +1,20 @@
-<p>post works!</p>
+<section class="flex flex-col min-h-[1000px]" aria-labelledby="news">
+  <h1 class="text-3xl p-3 border-b border-t-gray-100" id="news">Post</h1>
+
+  <div routerLink="../"
+       class="self-start cursor-pointer px-8 pt-4 flex items-center text-zinc-500 hover:text-zinc-700 font-semibold">
+    <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"
+         xmlns="http://www.w3.org/2000/svg">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7"></path>
+    </svg>
+    Back
+  </div>
+
+  <div class="flex flex-col px-8 mt-4">
+    <img class="object-fill h-80"
+         src="{{post()?.imageURL}}" alt="Alt description">
+    <h1 class="mt-3 text-4xl">{{ post()?.title }}</h1>
+    <p class="mt-2 text-zinc-800">{{ post()?.body }}</p>
+  </div>
+
+</section>
