--- a/src/app/posts/containers/post/post.component.html
+++ b/src/app/posts/containers/post/post.component.html
@@ -12,9 +12,9 @@
 
   <div class="flex flex-col px-8 mt-4">
     <img class="object-fill h-80"
-         src="{{post()?.imageURL}}" alt="Alt description">
-    <h1 class="mt-3 text-4xl">{{ post()?.title }}</h1>
-    <p class="mt-2 text-zinc-800">{{ post()?.body }}</p>
+         src="{{post().imageURL}}" alt="Alt description">
+    <h1 class="mt-3 text-4xl">{{ post().title }}</h1>
+    <p class="mt-2 text-zinc-800">{{ post().body }}</p>
   </div>
 
 </section>
