--- a/src/app/posts/containers/posts-list/components/post-card/post-card.component.html
+++ b/src/app/posts/containers/posts-list/components/post-card/post-card.component.html
@@ -1,6 +1,6 @@
-<article class="bg-gray-200 rounded-md cursor-pointer overflow-hidden"
+<article class="flex flex-1 flex-col bg-gray-200 rounded-md cursor-pointer overflow-hidden"
          routerLink="/post/{{post()?.id}}">
-  <figure class="flex">
+  <figure class="flex flex-1">
     <img class="flex-1 ease-out duration-100"
          width="300" height="200"
          priority
@@ -8,7 +8,7 @@
          ngSrc="{{post()?.imageURL}}" alt="Short description of the image">
   </figure>
 
-  <header>
+  <header class="flex-1">
     <h2 class="flex items-center justify-center px-3 py-6 box-content font-extralight">
       <span>{{ post()?.title }}</span>
     </h2>
