--- a/src/app/posts/containers/posts-list/components/paginator/paginator.component.html
+++ b/src/app/posts/containers/posts-list/components/paginator/paginator.component.html
@@ -1,1 +1,39 @@
-<p>paginator works!</p>
+@if(totalPages.length > 1){
+
+<nav class="flex justify-center my-4">
+  <ul class="inline-flex items-center space-x-2">
+    <li>
+      <button
+        class="px-3 py-1 bg-gray-300 text-gray-600 rounded disabled:opacity-50 disabled:cursor-not-allowed"
+        [disabled]="currentPage === 1"
+        (click)="selectPage(currentPage - 1)">
+        Previous
+      </button>
+    </li>
+
+    @for (page of totalPages; track page;){
+      <li>
+        <button
+          class="px-3 py-1 rounded focus:outline-none"
+          [class.bg-blue-500]="page === currentPage"
+          [class.text-white]="page === currentPage"
+          [class.bg-gray-300]="page !== currentPage"
+          [class.text-gray-600]="page !== currentPage"
+          (click)="selectPage(page)">
+          {{ page }}
+        </button>
+      </li>
+    }
+
+
+    <li>
+      <button
+        class="px-3 py-1 bg-gray-300 text-gray-600 rounded disabled:opacity-50 disabled:cursor-not-allowed"
+        [disabled]="currentPage === totalPages.length"
+        (click)="selectPage(currentPage + 1)">
+        Next
+      </button>
+    </li>
+  </ul>
+</nav>
+}
