--- a/src/app/posts/containers/posts-list/posts-list.component.html
+++ b/src/app/posts/containers/posts-list/posts-list.component.html
@@ -2,7 +2,7 @@
   <h1 class="text-3xl p-3 border-b border-t-gray-100" id="news">Posts</h1>
 
   <div class="grid grid-cols-3 gap-4 p-10 box-content">
-    @for (post of (paginatedPosts$ | async)?.posts; track post.title) {
+    @for (post of posts(); track post.title) {
       <app-post-card [post]="post"></app-post-card>
     } @empty {
       @for (placeholder of Array(8); track $index;){
@@ -11,4 +11,7 @@
     }
   </div>
 
+  <app-paginator [limit]="8"
+                 [totalCount]="totalCount()"
+                 (onPageSelect)="selectPage($event)"></app-paginator>
 </section>
