- Fix paginator configuration

--- a/src/app/posts/containers/posts-list/posts-list.component.html
+++ b/src/app/posts/containers/posts-list/posts-list.component.html
@@ -11,7 +11,7 @@
     }
   </div>
 
-  <app-paginator [limit]="8"
+  <app-paginator [limit]="paginate.limit"
                  [totalCount]="totalCount()"
                  (onPageSelect)="selectPage($event)"></app-paginator>
 </section>
