- Fixed UI posts cards

--- a/src/app/posts/containers/posts-list/posts-list.component.html
+++ b/src/app/posts/containers/posts-list/posts-list.component.html
@@ -1,17 +1,22 @@
-<section aria-labelledby="news">
-  <h1 class="text-3xl p-3 border-b border-t-gray-100" id="news">Posts</h1>
+<section class="flex flex-col flex-1 justify-between"
+         aria-labelledby="news">
 
-  <div class="grid grid-cols-3 gap-4 p-10 box-content">
-    @for (post of (posts$ | async); track post.title) {
-      <app-post-card [post]="post"></app-post-card>
-    } @empty {
-      @for (placeholder of Array(8); track $index;){
-        <div class="min-h-80 min-w-80 bg-gray-300 animate-pulse rounded-md"></div>
+  <div class="flex flex-col">
+    <h1 class="text-3xl p-3 border-b border-t-gray-100" id="news">Posts</h1>
+
+    <div class="grid grid-cols-3 gap-4 p-10 box-content">
+      @for (post of (posts$ | async); track post.title) {
+        <app-post-card [post]="post"></app-post-card>
+      } @empty {
+        @for (placeholder of Array(8); track $index; ) {
+          <div class="min-h-80 min-w-80 bg-gray-300 animate-pulse rounded-md"></div>
+        }
       }
-    }
+    </div>
   </div>
 
-  <app-paginator [limit]="paginate.limit"
+  <app-paginator class="bottom-0 relative"
+                 [limit]="paginate.limit"
                  [totalCount]="(totalCount$ | async)!"
                  (onPageSelect)="selectPage($event)"></app-paginator>
 </section>
