--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   </nav>
 </header>
 
-<main class="mx-10 bg-white box-content flex-1">
+<main class="flex mx-10 bg-white box-content flex-1">
 
   <router-outlet></router-outlet>
 
