--- a/src/app/posts/containers/post/post.component.html
+++ b/src/app/posts/containers/post/post.component.html
@@ -11,9 +11,9 @@
   </div>
 
   <div class="flex flex-col px-8 mt-4">
-    <img class="object-fill h-80"
+    <img class="object-cover object-center h-80 rounded-sm"
          src="{{post().imageURL}}" alt="Alt description">
-    <h1 class="mt-3 text-4xl">{{ post().title }}</h1>
+    <h1 class="mt-6 text-4xl">{{ post().title }}</h1>
     <p class="mt-2 text-zinc-800">{{ post().body }}</p>
   </div>
 
