--- a/src/app/posts/containers/post/post.component.html
+++ b/src/app/posts/containers/post/post.component.html
@@ -10,11 +10,17 @@
     Back
   </div>
 
-  <div class="flex flex-col px-8 mt-4">
-    <img class="object-cover object-center h-80 rounded-sm"
-         src="{{post().imageURL}}" alt="Alt description">
-    <h1 class="mt-6 text-4xl">{{ post().title }}</h1>
-    <p class="mt-2 text-zinc-800">{{ post().body }}</p>
-  </div>
+  @if ((post$ | async); as post){
+    <div class="flex flex-col px-8 mt-4">
+      <img class="w-full object-cover object-center h-80 rounded-sm"
+           [ngSrc]="post.imageURL"
+           width="800" height="600"
+           priority
+           placeholder="https://placehold.co/800x600"
+           alt="Alt description">
+      <h1 class="mt-6 text-4xl">{{ post.title }}</h1>
+      <p class="mt-2 text-zinc-800">{{ post.body }}</p>
+    </div>
+  }
 
 </section>
