--- a/src/app/posts/containers/post/post.component.html
+++ b/src/app/posts/containers/post/post.component.html
@@ -12,7 +12,7 @@
 
   @if ((post$ | async); as post){
     <div class="flex flex-col px-8 mt-4">
-      <img class="w-full object-cover object-center h-80 rounded-sm"
+      <img class="w-full object-cover object-top h-80 rounded-sm"
            [ngSrc]="post.imageURL"
            width="800" height="600"
            priority
